--- a/pictain/package.json
+++ b/pictain/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2",
+    "react-icons": "^4.10.1",
     "react-player": "^2.10.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
