--- a/pictain/package.json
+++ b/pictain/package.json
@@ -2,6 +2,7 @@
   "name": "pictain",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://192.168.111.1:8080",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -17,6 +18,7 @@
     "antd": "^4.21.5",
     "axios": "^0.27.2",
     "graphql": "^16.5.0",
+    "http-proxy-middleware": "^2.0.6",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-daum-postcode": "^3.1.1",
